fix z-index

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ p, li, a, span, div, h4, h5, h6{
   position: sticky;
   top: 0px;
   left: 0px;
-  z-index: 999;
+  z-index: 100;
   height: 100vh;
   width: 300px;
   background: var(--color-dark);
@@ -123,7 +123,7 @@ p, li, a, span, div, h4, h5, h6{
 }
 #header-nav{
   position: sticky;
-  z-index: 100;
+  z-index: 1;
   top: 0;
   padding: 4px 4px 0 4px;
   margin: 0 calc(4vw + 24px);
